tests/snapshots/main__eat.snap
---
source: tests/main.rs
info:
  program: nosh
  args:
    - journal
    - show
  env:
    XDG_DATA_HOME: /tmp/.tmpaU1Lgu
---
success: true
exit_code: 0
----- stdout -----
┌────────┬─────────┬───────┬──────┬─────────┬──────┐
│ name   │ serving │ carb  │ fat  │ protein │ kcal │
├────────┼─────────┼───────┼──────┼─────────┼──────┤
│ Oats   │ 1       │ 68.7  │ 5.9  │ 13.5    │ 382  │
├────────┼─────────┼───────┼──────┼─────────┼──────┤
│ Oats   │ 2.5     │ 171.8 │ 14.7 │ 33.8    │ 955  │
├────────┼─────────┼───────┼──────┼─────────┼──────┤
│ Banana │ 1       │ 23.0  │ 0.2  │ 0.7     │ 98   │
├────────┼─────────┼───────┼──────┼─────────┼──────┤
│ Oats   │ 1 cups  │ 137.4 │ 11.8 │ 27.0    │ 764  │
├────────┼─────────┼───────┼──────┼─────────┼──────┤
│ Oats   │ 0.25 c  │ 34.3  │ 2.9  │ 6.8     │ 191  │
├────────┼─────────┼───────┼──────┼─────────┼──────┤
│ Total  │         │ 435.2 │ 35.5 │ 81.7    │ 2390 │
└────────┴─────────┴───────┴──────┴─────────┴──────┘

----- stderr -----
