tests/snapshots/main__food_edit_new.snap
---
source: tests/main.rs
info:
  program: nosh
  args:
    - food
    - show
    - lemon
  env:
    XDG_DATA_HOME: /tmp/.tmpaabbQu
---
success: true
exit_code: 0
----- stdout -----
┌───────┬───────┬──────┬─────┬─────────┬──────┬──────────┐
│ key   │ name  │ carb │ fat │ protein │ kcal │ servings │
├───────┼───────┼──────┼─────┼─────────┼──────┼──────────┤
│ lemon │ Lemon │ 4.0  │ 0.0 │ 0.0     │ 16   │          │
└───────┴───────┴──────┴─────┴─────────┴──────┴──────────┘

----- stderr -----
