tests/snapshots/main__food_ls.snap
---
source: tests/main.rs
info:
  program: nosh
  args:
    - food
    - ls
  env:
    XDG_DATA_HOME: /tmp/.tmp7am09X
---
success: true
exit_code: 0
----- stdout -----
┌────────┬────────┬──────┬─────┬─────────┬──────┬──────────────┐
│ key    │ name   │ carb │ fat │ protein │ kcal │ servings     │
├────────┼────────┼──────┼─────┼─────────┼──────┼──────────────┤
│ banana │ Banana │ 23.0 │ 0.2 │ 0.7     │ 98   │ 100g         │
│ oats   │ Oats   │ 68.7 │ 5.9 │ 13.5    │ 382  │ 0.5cups,100g │
└────────┴────────┴──────┴─────┴─────────┴──────┴──────────────┘

----- stderr -----
