tests/snapshots/main__food_ls_pattern.snap
---
source: tests/main.rs
info:
  program: nosh
  args:
    - food
    - ls
    - oat
  env:
    XDG_DATA_HOME: /tmp/.tmp7HoIED
---
success: true
exit_code: 0
----- stdout -----
┌────────────────┬────────────────┬──────┬─────┬─────────┬──────┬───────────────┐
│ key            │ name           │ carb │ fat │ protein │ kcal │ servings      │
├────────────────┼────────────────┼──────┼─────┼─────────┼──────┼───────────────┤
│ banana_oatmeal │ Banana Oatmeal │ 91.7 │ 6.1 │ 14.2    │ 480  │ 0.5cups, 100g │
│ oats           │ Oats           │ 68.7 │ 5.9 │ 13.5    │ 382  │ 0.5cups, 100g │
└────────────────┴────────────────┴──────┴─────┴─────────┴──────┴───────────────┘

----- stderr -----
