tests/snapshots/main__food_ls_pattern_nomatch.snap
---
source: tests/main.rs
info:
  program: nosh
  args:
    - food
    - ls
    - nope
  env:
    XDG_DATA_HOME: /tmp/.tmpzXPG5X
---
success: true
exit_code: 0
----- stdout -----
┌─────┬──────┬──────┬─────┬─────────┬──────┬──────────┐
│ key │ name │ carb │ fat │ protein │ kcal │ servings │
├─────┼──────┼──────┼─────┼─────────┼──────┼──────────┤

----- stderr -----
