tests/snapshots/main__food_rm-2.snap
---
source: tests/main.rs
info:
  program: nosh
  args:
    - food
    - ls
  env:
    XDG_DATA_HOME: /tmp/.tmpEKEtLU
---
success: true
exit_code: 0
----- stdout -----
┌────────┬────────┬──────┬─────┬─────────┬──────┬──────────┐
│ key    │ name   │ carb │ fat │ protein │ kcal │ servings │
├────────┼────────┼──────┼─────┼─────────┼──────┼──────────┤
│ banana │ Banana │ 23.0 │ 0.2 │ 0.7     │ 98   │ 100g     │
└────────┴────────┴──────┴─────┴─────────┴──────┴──────────┘

----- stderr -----
